FantasticGradleController methods annotated with DefaultResponseSchemaTemplate annotation